--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
 .DS_Store
+node_modules
+package-lock.json
+*.aux
+*.log
+*.out
+*.synctex.gz
+*.toc
+*.lof
+*.lot
+*.fls
+*.fdb_latexmk
+*.bbl
+*.blg
